force-app/main/default/objects/Role__c/Role__c.object-meta.xml
<CustomObject>
    <description>Job role for Job Search Tracker app</description>
    <label>Role</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>