force-app/main/default/objects/Role__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this role primarily serving internal &quot;clients&quot; or is it external, such as in an agency?</inlineHelpText>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>