force-app/main/default/objects/Role__c/fields/Open_Application_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Application_Count__c</fullName>
    <label>Open Application Count</label>
    <summaryFilterItems>
        <field>Application__c.Status__c</field>
        <operation>notContain</operation>
        <value>Hired, Discontinued by Applicant, Discontinued by Company</value>
    </summaryFilterItems>
    <summaryForeignKey>Application__c.Role__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>